cmake_minimum_required(VERSION 3.4)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(app)
add_executable(mt ${CMAKE_SOURCE_DIR}/map.cpp)
if (BUILD_TESTS)
  add_subdirectory(third-party/gtest)
  enable_testing()
  include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
  include_directories(${gmock_SOURCE_DIR}/include ${gmock_SOURCE_DIR})  
  file(GLOB ACCOUNT_TEST_SOURCES tests.cpp)
  add_executable(check ${ACCOUNT_TEST_SOURCES})
  target_link_libraries(check gtest gtest_main gmock)
  add_test(NAME check COMMAND check)
endif ()
